JSTL Date parsing fix and Tomcat add-opens when starting with the RemoteServer as opposed to Tomcat catalina.sh